--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ ul{
 
 header .menu{
     list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    height: 25%;
 }
 
 header .menu li{
@@ -45,7 +47,7 @@ header .icones li{
 }
 
 header{
-    height: 160px;
+    height: 200px;
 }
 
 div.menu{
@@ -59,13 +61,16 @@ div.titulo{
     background-color: #0d1e4bf6;
     border: 1px solid #0d1e4bf6;
     padding: 10px;
+    height: 52%;
 }
 
-h1.titulo{
-    margin: 0px;
+h1.titulo1{
+    margin: 15px;
     margin-bottom: 10px;
     color: white;
     text-align: center;
+    letter-spacing: 3px;
+    font-family: 'Source Code Pro', monospace;
 }
 
 h3.subTitulo{
@@ -84,42 +89,68 @@ h3.subTitulo{
 /* Carrosel de imagens */
 
 #bloco1{
-    width: 900px;
-    height: 450px;
-    margin: 0 auto;
+    height: 400px;
+    width: 800px;
     overflow: hidden;
+    margin: 15px auto;
 }
 
-#bloco1 .slides{
+.slides{
     display: flex;
-    position: relative;
+    width: 400%;
+    height: 100%;
 }
 
-#bloco1 .slides img{
-    width: 900px;
-    height: 450px;
+.slide{
+    width: 25%;
+    transition: 1s;
 }
 
-.seta{
+#bloco1 .slide img{
+    width: 100%;
+    height: 100%;
+}
+
+.navigation{
     position: absolute;
-    color: white;
-    font-size: 2.5em;
+    bottom: 65px;
+    left: 50%;
+    transform: translatex(-50%);
+    display: flex;
 }
 
-.seta1{
-    left: 15px;
-    top: 50%;
-}
-
-.seta2{
-    right: 15px;
-    top: 50%;
-}
-
-.seta:hover{
-    transform: scale(1.5);
-    transition: 0.5s;
+.bar{
+    width: 10px;
+    height: 10px;
+    border: 2px solid white;
+    margin: 6px;
+    border-radius: 15px;
     cursor: pointer;
+    transition: 0.5s ease;
+}
+
+.bar:hover{
+    background-color: white;
+}
+
+.input{
+    display: none;
+}
+
+#slide1:checked ~ .img1{
+    margin-left: 0;
+}
+
+#slide2:checked ~ .img1{
+    margin-left: -25%;
+}
+
+#slide3:checked ~ .img1{
+    margin-left: -50%;
+}
+
+#slide4:checked ~ .img1{
+    margin-left: -75%;
 }
 
 /* Bloco 2 */
