--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
     font-family: sans-serif;
-    color: white;
 }
 
 #container{
@@ -28,12 +27,18 @@ header .menu{
     list-style: none;
     font-family: 'Montserrat', sans-serif;
     height: 25%;
+
 }
 
 header .menu li{
     display: inline;
-    margin-right: 10px;
+    margin-right: 15px;
     font-size: 1.2em;
+    padding: 5px;
+}
+
+header .menu .home{
+    border: 0.5px solid white
 }
 
 header .icones{
@@ -260,3 +265,50 @@ h3.subTitulo{
     text-align: center;
     padding: 8px;
 }
+
+/* Fim bloco 3 */
+
+/* Inicio bloco 4 (video) */
+
+#bloco4{
+    height: 550px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#bloco4 iframe{
+    box-shadow: 3px 3px 6px black;
+    width: 60%;
+    height: 400px;
+}
+
+#bloco4 p{
+    color: #0d1e4be0;
+    width: 30%;
+    height: 400px;
+    font-size: 2.6em;
+}
+
+/* Fim bloco 4 */
+
+/* Inicio bloco5 */
+
+#bloco5{
+
+}
+
+#bloco5 h1{
+    margin-top: 50px;
+    color: #0d1e4be0;
+    text-align: center;
+    font-size: 2.3em;
+}
+
+#bloco5 div{
+    margin: 0px auto;
+    width: 800px;
+}
+
+/* Fim bloco 5 */
+
