--- a/style.css
+++ b/style.css
@@ -2,11 +2,54 @@ body{
     font-family: sans-serif;
 }
 
-#container{
+/* Cabeçalho */
 
+header{
+    margin: 0 auto;
+    width: 97vw;
 }
 
-/* Cabeçalho */
+header .nav-bar{
+    list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    height: 25%;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav.nav-bar{
+    background-color: #0d1e4bf6;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+ul{
+    margin: 0px;
+    padding: 10px 0px;
+    height: 20px;
+    list-style: none;
+}
+
+header .nav-bar .ataul{
+    border: 0.5px solid white
+}
+
+header .nav-bar li{
+    display: inline;
+    margin-right: 15px;
+    font-size: 1.2em;
+    padding: 5px;
+}
+
+header .icones{
+    margin-left: 5px;
+    color: white;
+}
+
+header .icones li{
+    margin-right: 10px;
+}
 
 a{
     color: white;
@@ -17,58 +60,12 @@ a:hover{
     color: darkgray;
 }
 
-ul{
-    margin: 0px;
-    padding: 10px 0px;
-    height: 20px;
-}
-
-header .menu{
-    list-style: none;
-    font-family: 'Montserrat', sans-serif;
-    height: 25%;
-    display: flex;
-    justify-content: space-around;
-}
-
-header .menu li{
-    display: inline;
-    margin-right: 15px;
-    font-size: 1.2em;
-    padding: 5px;
-}
-
-header .menu .home{
-    border: 0.5px solid white
-}
-
-header .icones{
-    list-style: none;
-    margin-left: 5px;
-    color: white;
-}
-
-header .icones li{
-    display: inline;
-    margin-right: 10px;
-}
-
-header{
-    margin: 0 auto;
-    width: 1300px;
-    height: 180px;
-}
-
-div.menu{
-    background-color: #0d1e4bf6;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-}
 
 div.logoTitulo{
     display: flex;
     border: 0px solid black;
+    margin: 0 auto;
+    width: 97vw;
     height: 140px;
     background-color: #0d1e4be6;
 }
@@ -80,7 +77,7 @@ div.titulo{
     width: 61%;
 }
 
-h1.titulo1{
+.logoTitulo h1{
     margin: 15px;
     margin-bottom: 10px;
     color: white;
@@ -90,7 +87,7 @@ h1.titulo1{
     font-size: 1.9em;
 }
 
-h3.subTitulo{
+.logoTitulo h3{
     margin: 0px;
     color: white;
     text-align: center;
@@ -105,11 +102,6 @@ h3.subTitulo{
 .logoTitulo .logo img{
     width: 100%;
     height: 100%;
-}
-
-.scaled:hover{
-    transform: scale(2.5);
-    color: black;
 }
 
 /* Fim cabeçalho */
@@ -142,7 +134,7 @@ h3.subTitulo{
 
 .navigation{
     position: absolute;
-    bottom: 50px;
+    bottom: 15px;
     left: 50%;
     transform: translatex(-50%);
     display: flex;
@@ -393,7 +385,6 @@ footer div.flex{
 }
 
 footer div.flex div{
-    border: 0px solid black;
     color: white;
 }
 
@@ -432,7 +423,8 @@ footer .horarios{
 }
 
 footer .horarios ul{
-    margin-left: 10%;
+    text-align: center;
+    margin-right: 15%;
 }
 
 footer .horarios ul li{
