--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ div.titulo{
 
 .conteudoB2 .paragrafoB2{
     width: 40%;
-    font-family: 'Source Code Pro', monospace;
+    font-family: sans-serif;
     font-size: 1.2em;
 }
 
@@ -266,18 +266,10 @@ div.titulo{
 
 .informacoes div{
     width: 32%;
-    height: 250px;
 }
 
-.informacoes div ul{
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-}
-
-.informacoes div ul li{
+.informacoes div p{
     text-align: center;
-    padding: 8px;
 }
 
 /* Fim bloco 3 */
@@ -285,11 +277,12 @@ div.titulo{
 /* Inicio bloco 4 (video) */
 
 #bloco4{
-        width: 1270px;
-    margin: 0 auto;
+    width: 1270px;
+    margin: 15px auto;
     height: 550px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    column-gap: 20px;
     align-items: center;
 }
 
@@ -313,9 +306,15 @@ div.titulo{
 #bloco5{
     width: 1270px;
     margin: 0 auto;
-    box-shadow: 3px 3px 6px black;
-    background-color: #0d1e4bf6;
-    padding: 10px;
+    padding: 35px 0px;
+    font-family: sans-serif;
+    text-align: center;
+    background-color: #0d1e4be0;
+}
+
+#faq{
+    width: 700px;
+    margin: 0 auto;
 }
 
 #bloco5 h1{
@@ -324,27 +323,57 @@ div.titulo{
     font-size: 1.7em;
 }
 
-#bloco5 details{
+.faq-item button{
+    width: 700px;
+    padding: 14px;
+    position: relative;
+    background-color: #0d1e4be0;
     color: white;
-    margin-bottom: 16px;
-    padding: 0px;
+    border: 0px;
+    box-shadow: 1px 1px 3px black;
+    display: flex;
+    justify-content: center;
 }
 
-details:hover{
+.faq-item button:hover{
     cursor: pointer;
 }
 
-#bloco5 details summary{
-    font-size: 1.3em;
-} 
+.faq-item button span{
+    border: 0px solid red;
+    display: block;
+    width: 85%;
+}
 
-#bloco5 details p{
-    background-color: #0d1e4b;
-    border: 1px solid white;
-    font-size: 1em;
-    padding: 10px;
-    margin: 2px;
-} 
+.faq-item button i{
+    position: absolute;
+    right: 15px;
+    border: 0px solid red;
+    display: block;
+}
+
+.faq-item .faq-resp {
+    background-color: #f3f3f3;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+    margin: 0;
+  }
+  
+  .faq-item .action {
+    max-height: 10rem;
+    padding: 1rem;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .faq-item i{
+    transition: all 0.5s ease-in-out;
+  }
+
+  .faq-item i.rotate{
+    transform: rotate(180deg);
+  }
+
 
 /* Fim bloco5 */
 
@@ -365,6 +394,12 @@ details:hover{
 #bloco6 div{
     margin: 0px auto;
     width: 800px;
+    height: 450px;
+}
+
+#bloco6 div iframe{
+    width: 100%;
+    height: 100%;
 }
 
 /* Fim bloco 6 */
@@ -381,6 +416,7 @@ footer{
 
 footer div.flex{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     column-gap: 30px;
 }
@@ -410,7 +446,7 @@ footer .navRodape{
 }
 
 footer .navRodape ul{
-    text-align: center
+    text-align: center;
 }
 
 footer .navRodape ul li{
