--- a/css/galeria.css
+++ b/css/galeria.css
@@ -1,13 +1,25 @@
 nav.nav-bar{
     padding: 10px;
     background-color: #0d1e4be6;
+    height: 50px;
+}
+
+nav.nav-bar .logo{
+    display: none;
 }
 
 @media screen and (max-width: 840px){
     nav.nav-bar .logo{
-        display: none;
+        width: 75px;
+        height: 100%;
+        display: block;
+    }
+    nav.nav-bar .logo img{
+        width: 100%;
+        height: 100%;
     }
 }
+
 
 @media screen and (max-width: 1150px){
     #container section.galeria{
@@ -36,7 +48,7 @@ nav.nav-bar{
         grid-row: 16 / 17;
     }
     div.item07{
-        grid-column: 7 / 12;
+        grid-column: 8 / 12;
         grid-row: 2 / 3;
     }
     div.item08{
@@ -53,7 +65,7 @@ nav.nav-bar{
     }
 
     div.item11{
-        grid-column: 7 / 12;
+        grid-column: 8 / 12;
         grid-row: 1 / 2;
     }
     div.item12{
@@ -61,7 +73,7 @@ nav.nav-bar{
         grid-row: 3 / 5;
     }
     div.item13{
-        grid-column: 1 / 7;
+        grid-column: 1 / 8;
         grid-row: 1 / 3;
     }
     div.item14{
@@ -166,6 +178,320 @@ nav.nav-bar{
     }
 }
 
+@media screen and (max-width: 670px){
+    #container section.galeria{
+        width: 450px;
+        grid-auto-rows: 50px;
+    }
+
+    div.item00{
+        grid-column: 1 / 6;
+        grid-row: 119 / 125;
+    }
+    div.item01{
+        grid-column: 1 / 12;
+        grid-row: 96 / 100;
+    }
+    div.item02{
+        grid-column: 1 / 6;
+        grid-row: 88 / 92;
+    }
+    div.item05{
+        grid-column: 1 / 6;
+        grid-row: 92 / 96;
+    }
+    div.item06{
+        grid-column: 6 / 12;
+        grid-row: 61 / 65;
+    }
+    div.item07{
+        grid-column: 7 / 12;
+        grid-row: 6 / 10;
+    }
+    div.item08{
+        grid-column: 1 / 12;
+        grid-row: 65 / 70;
+    }
+    div.item09{
+        grid-column: 1 / 12;
+        grid-row: 138 / 143;
+    }
+    div.item10{
+        grid-column: 1 / 12;
+        grid-row: 25 / 30;
+    }
+
+    div.item11{
+        grid-column: 1 / 7;
+        grid-row: 6 / 10;
+    }
+    div.item12{
+        grid-column: 1 / 12;
+        grid-row: 1 / 6;
+    }
+    div.item13{
+        grid-column: 1 / 12;
+        grid-row: 10 / 18;
+    }
+    div.item14{
+        grid-column: 1 / 12;
+        grid-row: 143 / 151;
+    }
+    div.item15{
+        grid-column: 1 / 7;
+        grid-row: 35 / 41;
+    }
+    div.item16{
+        grid-column: 1 / 12;
+        grid-row: 81 / 88;
+    }
+    div.item17{
+        grid-column: 1 / 12;
+        grid-row: 125 / 132;
+    }
+    div.item18{
+        grid-column: 6 / 12;
+        grid-row: 57 / 61;
+    }
+    div.item19{
+        grid-column: 1 / 12;
+        grid-row: 52 / 57;
+    } 
+    div.item20{
+        grid-column: 1 / 12;
+        grid-row: 76 / 81;
+    }
+    div.item21{
+        grid-column: 6 / 12;
+        grid-row: 18 / 25;
+    } 
+    div.item22{
+        grid-column: 1 / 6;
+        grid-row: 70 / 76;
+    } 
+    div.item24{
+        grid-column: 1 / 8;
+        grid-row: 45 / 52;
+    }        
+    div.item26{
+        grid-column: 6 / 12;
+        grid-row: 119 / 125;
+    }
+    div.item27{
+        grid-column: 8 / 12;
+        grid-row: 45 / 52;
+    }
+    div.item28{
+        grid-column: 7 / 12;
+        grid-row: 132 / 138;
+    }
+    div.item29{
+        grid-column: 1 / 6;
+        grid-row: 18 / 25;
+    }
+    div.item30{
+        grid-column: 6 / 12;
+        grid-row: 88 / 96;
+    }
+    div.item31{
+        grid-column: 1 / 6;
+        grid-row: 57 / 65;
+    }
+    div.item32{
+        grid-column: 7 / 12;
+        grid-row: 35 / 41;
+    }
+    div.item33{
+        grid-column: 6 / 12;
+        grid-row: 108 / 114;
+    }
+    div.item34{
+        grid-column: 1 / 6;
+        grid-row: 108 / 114;
+    }
+    div.item36{
+        grid-column: 1 / 12;
+        grid-row: 100 / 108;
+    }
+    div.item37{
+        grid-column: 6 / 12;
+        grid-row: 70 / 76;
+    }
+    div.item38{
+        grid-column: 1 / 7;
+        grid-row: 132 / 138;
+    }
+    div.item40{
+        grid-column: 1 / 12;
+        grid-row: 41 / 45;
+    }
+    div.item41{
+        grid-column: 1 / 12;
+        grid-row: 114 / 119;
+    }
+    div.item42{
+        grid-column: 1 / 12;
+        grid-row: 30 / 35;
+    }
+}
+
+@media screen and (max-width: 670px){
+    #container section.galeria{
+        width: 315px;
+        gap: 5px;
+        grid-auto-rows: 50px;
+    }
+
+    div.item00{
+        grid-column: 1 / 6;
+        grid-row: 110 / 115;
+    }
+    div.item01{
+        grid-column: 1 / 12;
+        grid-row: 99 / 102;
+    }
+    div.item02{
+        grid-column: 1 / 7;
+        grid-row: 89 / 93;
+    }
+    div.item05{
+        grid-column: 7 / 12;
+        grid-row: 89 / 93;
+    }
+    div.item06{
+        grid-column: 1 / 6;
+        grid-row: 54 / 58;
+    }
+    div.item07{
+        grid-column: 1 / 12;
+        grid-row: 11 / 16;
+    }
+    div.item08{
+        grid-column: 1 / 12;
+        grid-row: 62 / 66;
+    }
+    div.item09{
+        grid-column: 1 / 12;
+        grid-row: 127 / 131;
+    }
+    div.item10{
+        grid-column: 1 / 12;
+        grid-row: 21 / 25;
+    }
+    div.item11{
+        grid-column: 1 / 12;
+        grid-row: 5 / 11;
+    }
+    div.item12{
+        grid-column: 1 / 12;
+        grid-row: 1 / 5;
+    }
+    div.item13{
+        grid-column: 1 / 12;
+        grid-row: 16 / 21;
+    }
+    div.item14{
+        grid-column: 1 / 12;
+        grid-row: 121 / 127;
+    }
+    div.item15{
+        grid-column: 1 / 12;
+        grid-row: 30 / 36;
+    }
+    div.item16{
+        grid-column: 1 / 12;
+        grid-row: 83 / 89;
+    }
+    div.item17{
+        grid-column: 1 / 12;
+        grid-row: 115 / 121;
+    }
+    div.item18{
+        grid-column: 6 / 12;
+        grid-row: 54 / 58;
+    }
+    div.item19{
+        grid-column: 1 / 12;
+        grid-row: 58 / 62;
+    } 
+    div.item20{
+        grid-column: 1 / 12;
+        grid-row: 73 / 77;
+    }
+    div.item21{
+        grid-column: 1 / 7;
+        grid-row: 25 / 30;
+    } 
+    div.item22{
+        grid-column: 1 / 7;
+        grid-row: 77 / 83;
+    } 
+    div.item24{
+        grid-column: 1 / 7;
+        grid-row: 49 / 54;
+    }        
+    div.item26{
+        grid-column: 6 / 12;
+        grid-row: 131 / 135;
+    }
+    div.item27{
+        grid-column: 6 / 12;
+        grid-row: 40 / 46;
+    }
+    div.item28{
+        grid-column: 6 / 12;
+        grid-row: 110 / 115;
+    }
+    div.item29{
+        grid-column: 7 / 12;
+        grid-row: 25 / 30;
+    }
+    div.item30{
+        grid-column: 7 / 12;
+        grid-row: 77 / 83;
+    }
+    div.item31{
+        grid-column: 7 / 12;
+        grid-row: 49 / 54;
+    }
+    div.item32{
+        grid-column: 1 / 6;
+        grid-row: 40 / 46;
+    }
+    div.item33{
+        grid-column: 6 / 12;
+        grid-row: 102 / 106;
+    }
+    div.item34{
+        grid-column: 1 / 6;
+        grid-row: 102 / 106;
+    }
+    div.item36{
+        grid-column: 1 / 12;
+        grid-row: 93 / 99;
+    }
+    div.item37{
+        grid-column: 1 / 12;
+        grid-row: 66 / 73;
+    }
+    div.item38{
+        grid-column: 1 / 6;
+        grid-row: 131 / 135;
+    }
+    div.item40{
+        grid-column: 1 / 12;
+        grid-row: 46 / 49;
+    }
+    div.item41{
+        grid-column: 1 / 12;
+        grid-row: 106 / 110;
+    }
+    div.item42{
+        grid-column: 1 / 12;
+        grid-row: 36 / 40;
+    }
+}
+
 section.galeria{
     margin: 30px auto;
     display: grid;
@@ -196,7 +522,7 @@ section.galeria{
 }
 
 .item01{
-    grid-column: 1 / 7;
+    grid-column: 1 / 9;
     grid-row: 21 / 23;
 }
 
@@ -343,6 +669,7 @@ section.galeria{
 .item34{
     grid-column: 7 / 9;
     grid-row: 21 / 23;
+    display: none;
 }
 
 .item36{
